rds-postgres/cdk.out/RdsPostgresStack.template.json
{
 "Resources": {
  "carinfobucketCDC1325C": {
   "Type": "AWS::S3::Bucket",
   "Properties": {
    "Tags": [
     {
      "Key": "aws-cdk:cr-owned:be99bbdd",
      "Value": "true"
     }
    ]
   },
   "UpdateReplacePolicy": "Retain",
   "DeletionPolicy": "Retain",
   "Metadata": {
    "aws:cdk:path": "RdsPostgresStack/car-info-bucket/Resource"
   }
  },
  "DeployWebsiteAwsCliLayer17DBC421": {
   "Type": "AWS::Lambda::LayerVersion",
   "Properties": {
    "Content": {
     "S3Bucket": "cdk-hnb659fds-assets-145423545297-us-west-2",
     "S3Key": "e2277687077a2abf9ae1af1cc9565e6715e2ebb62f79ec53aa75a1af9298f642.zip"
    },
    "Description": "/opt/awscli/aws"
   },
   "Metadata": {
    "aws:cdk:path": "RdsPostgresStack/DeployWebsite/AwsCliLayer/Resource",
    "aws:asset:path": "asset.e2277687077a2abf9ae1af1cc9565e6715e2ebb62f79ec53aa75a1af9298f642.zip",
    "aws:asset:is-bundled": false,
    "aws:asset:property": "Content"
   }
  },
  "DeployWebsiteCustomResourceD116527B": {
   "Type": "Custom::CDKBucketDeployment",
   "Properties": {
    "ServiceToken": {
     "Fn::GetAtt": [
      "CustomCDKBucketDeployment8693BB64968944B69AAFB0CC9EB8756C81C01536",
      "Arn"
     ]
    },
    "SourceBucketNames": [
     "cdk-hnb659fds-assets-145423545297-us-west-2"
    ],
    "SourceObjectKeys": [
     "0cf7acbbc1ba093c14ac947678c44e93dd7e0f94dcf36a4142f664dc29254804.zip"
    ],
    "DestinationBucketName": {
     "Ref": "carinfobucketCDC1325C"
    },
    "Prune": true
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete",
   "Metadata": {
    "aws:cdk:path": "RdsPostgresStack/DeployWebsite/CustomResource/Default"
   }
  },
  "CustomCDKBucketDeployment8693BB64968944B69AAFB0CC9EB8756CServiceRole89A01265": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "lambda.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    },
    "ManagedPolicyArns": [
     {
      "Fn::Join": [
       "",
       [
        "arn:",
        {
         "Ref": "AWS::Partition"
        },
        ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole"
       ]
      ]
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "RdsPostgresStack/Custom::CDKBucketDeployment8693BB64968944B69AAFB0CC9EB8756C/ServiceRole/Resource"
   }
  },
  "CustomCDKBucketDeployment8693BB64968944B69AAFB0CC9EB8756CServiceRoleDefaultPolicy88902FDF": {
   "Type": "AWS::IAM::Policy",
   "Properties": {
    "PolicyDocument": {
     "Statement": [
      {
       "Action": [
        "s3:GetBucket*",
        "s3:GetObject*",
        "s3:List*"
       ],
       "Effect": "Allow",
       "Resource": [
        "arn:aws:s3:::cdk-hnb659fds-assets-145423545297-us-west-2",
        "arn:aws:s3:::cdk-hnb659fds-assets-145423545297-us-west-2/*"
       ]
      },
      {
       "Action": [
        "s3:Abort*",
        "s3:DeleteObject*",
        "s3:GetBucket*",
        "s3:GetObject*",
        "s3:List*",
        "s3:PutObject",
        "s3:PutObjectLegalHold",
        "s3:PutObjectRetention",
        "s3:PutObjectTagging",
        "s3:PutObjectVersionTagging"
       ],
       "Effect": "Allow",
       "Resource": [
        {
         "Fn::GetAtt": [
          "carinfobucketCDC1325C",
          "Arn"
         ]
        },
        {
         "Fn::Join": [
          "",
          [
           {
            "Fn::GetAtt": [
             "carinfobucketCDC1325C",
             "Arn"
            ]
           },
           "/*"
          ]
         ]
        }
       ]
      }
     ],
     "Version": "2012-10-17"
    },
    "PolicyName": "CustomCDKBucketDeployment8693BB64968944B69AAFB0CC9EB8756CServiceRoleDefaultPolicy88902FDF",
    "Roles": [
     {
      "Ref": "CustomCDKBucketDeployment8693BB64968944B69AAFB0CC9EB8756CServiceRole89A01265"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "RdsPostgresStack/Custom::CDKBucketDeployment8693BB64968944B69AAFB0CC9EB8756C/ServiceRole/DefaultPolicy/Resource"
   }
  },
  "CustomCDKBucketDeployment8693BB64968944B69AAFB0CC9EB8756C81C01536": {
   "Type": "AWS::Lambda::Function",
   "Properties": {
    "Code": {
     "S3Bucket": "cdk-hnb659fds-assets-145423545297-us-west-2",
     "S3Key": "9eb41a5505d37607ac419321497a4f8c21cf0ee1f9b4a6b29aa04301aea5c7fd.zip"
    },
    "Environment": {
     "Variables": {
      "AWS_CA_BUNDLE": "/etc/pki/ca-trust/extracted/pem/tls-ca-bundle.pem"
     }
    },
    "Handler": "index.handler",
    "Layers": [
     {
      "Ref": "DeployWebsiteAwsCliLayer17DBC421"
     }
    ],
    "Role": {
     "Fn::GetAtt": [
      "CustomCDKBucketDeployment8693BB64968944B69AAFB0CC9EB8756CServiceRole89A01265",
      "Arn"
     ]
    },
    "Runtime": "python3.9",
    "Timeout": 900
   },
   "DependsOn": [
    "CustomCDKBucketDeployment8693BB64968944B69AAFB0CC9EB8756CServiceRoleDefaultPolicy88902FDF",
    "CustomCDKBucketDeployment8693BB64968944B69AAFB0CC9EB8756CServiceRole89A01265"
   ],
   "Metadata": {
    "aws:cdk:path": "RdsPostgresStack/Custom::CDKBucketDeployment8693BB64968944B69AAFB0CC9EB8756C/Resource",
    "aws:asset:path": "asset.9eb41a5505d37607ac419321497a4f8c21cf0ee1f9b4a6b29aa04301aea5c7fd",
    "aws:asset:is-bundled": false,
    "aws:asset:property": "Code"
   }
  },
  "RdsPostgresStackvpcCBA53F8B": {
   "Type": "AWS::EC2::VPC",
   "Properties": {
    "CidrBlock": "10.0.0.0/16",
    "EnableDnsHostnames": true,
    "EnableDnsSupport": true,
    "InstanceTenancy": "default",
    "Tags": [
     {
      "Key": "Name",
      "Value": "RdsPostgresStack/RdsPostgresStack-vpc"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "RdsPostgresStack/RdsPostgresStack-vpc/Resource"
   }
  },
  "RdsPostgresStackvpcPublicSubnet1Subnet77A07D2B": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-west-2a",
    "CidrBlock": "10.0.0.0/19",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "RdsPostgresStack/RdsPostgresStack-vpc/PublicSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "RdsPostgresStackvpcCBA53F8B"
    }
   },
   "Metadata": {
    "aws:cdk:path": "RdsPostgresStack/RdsPostgresStack-vpc/PublicSubnet1/Subnet"
   }
  },
  "RdsPostgresStackvpcPublicSubnet1RouteTable4789F9D4": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "RdsPostgresStack/RdsPostgresStack-vpc/PublicSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "RdsPostgresStackvpcCBA53F8B"
    }
   },
   "Metadata": {
    "aws:cdk:path": "RdsPostgresStack/RdsPostgresStack-vpc/PublicSubnet1/RouteTable"
   }
  },
  "RdsPostgresStackvpcPublicSubnet1RouteTableAssociation3C558A91": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "RdsPostgresStackvpcPublicSubnet1RouteTable4789F9D4"
    },
    "SubnetId": {
     "Ref": "RdsPostgresStackvpcPublicSubnet1Subnet77A07D2B"
    }
   },
   "Metadata": {
    "aws:cdk:path": "RdsPostgresStack/RdsPostgresStack-vpc/PublicSubnet1/RouteTableAssociation"
   }
  },
  "RdsPostgresStackvpcPublicSubnet1DefaultRouteEE1578C5": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "RdsPostgresStackvpcIGW59F97FCD"
    },
    "RouteTableId": {
     "Ref": "RdsPostgresStackvpcPublicSubnet1RouteTable4789F9D4"
    }
   },
   "DependsOn": [
    "RdsPostgresStackvpcVPCGW6C0E8D70"
   ],
   "Metadata": {
    "aws:cdk:path": "RdsPostgresStack/RdsPostgresStack-vpc/PublicSubnet1/DefaultRoute"
   }
  },
  "RdsPostgresStackvpcPublicSubnet2SubnetC802B7D9": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-west-2b",
    "CidrBlock": "10.0.32.0/19",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "RdsPostgresStack/RdsPostgresStack-vpc/PublicSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "RdsPostgresStackvpcCBA53F8B"
    }
   },
   "Metadata": {
    "aws:cdk:path": "RdsPostgresStack/RdsPostgresStack-vpc/PublicSubnet2/Subnet"
   }
  },
  "RdsPostgresStackvpcPublicSubnet2RouteTable25E8CD9D": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "RdsPostgresStack/RdsPostgresStack-vpc/PublicSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "RdsPostgresStackvpcCBA53F8B"
    }
   },
   "Metadata": {
    "aws:cdk:path": "RdsPostgresStack/RdsPostgresStack-vpc/PublicSubnet2/RouteTable"
   }
  },
  "RdsPostgresStackvpcPublicSubnet2RouteTableAssociationCAA258F8": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "RdsPostgresStackvpcPublicSubnet2RouteTable25E8CD9D"
    },
    "SubnetId": {
     "Ref": "RdsPostgresStackvpcPublicSubnet2SubnetC802B7D9"
    }
   },
   "Metadata": {
    "aws:cdk:path": "RdsPostgresStack/RdsPostgresStack-vpc/PublicSubnet2/RouteTableAssociation"
   }
  },
  "RdsPostgresStackvpcPublicSubnet2DefaultRoute9569C351": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "RdsPostgresStackvpcIGW59F97FCD"
    },
    "RouteTableId": {
     "Ref": "RdsPostgresStackvpcPublicSubnet2RouteTable25E8CD9D"
    }
   },
   "DependsOn": [
    "RdsPostgresStackvpcVPCGW6C0E8D70"
   ],
   "Metadata": {
    "aws:cdk:path": "RdsPostgresStack/RdsPostgresStack-vpc/PublicSubnet2/DefaultRoute"
   }
  },
  "RdsPostgresStackvpcPublicSubnet3Subnet5CA697CE": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-west-2c",
    "CidrBlock": "10.0.64.0/19",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "RdsPostgresStack/RdsPostgresStack-vpc/PublicSubnet3"
     }
    ],
    "VpcId": {
     "Ref": "RdsPostgresStackvpcCBA53F8B"
    }
   },
   "Metadata": {
    "aws:cdk:path": "RdsPostgresStack/RdsPostgresStack-vpc/PublicSubnet3/Subnet"
   }
  },
  "RdsPostgresStackvpcPublicSubnet3RouteTable292170FC": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "RdsPostgresStack/RdsPostgresStack-vpc/PublicSubnet3"
     }
    ],
    "VpcId": {
     "Ref": "RdsPostgresStackvpcCBA53F8B"
    }
   },
   "Metadata": {
    "aws:cdk:path": "RdsPostgresStack/RdsPostgresStack-vpc/PublicSubnet3/RouteTable"
   }
  },
  "RdsPostgresStackvpcPublicSubnet3RouteTableAssociation7307D016": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "RdsPostgresStackvpcPublicSubnet3RouteTable292170FC"
    },
    "SubnetId": {
     "Ref": "RdsPostgresStackvpcPublicSubnet3Subnet5CA697CE"
    }
   },
   "Metadata": {
    "aws:cdk:path": "RdsPostgresStack/RdsPostgresStack-vpc/PublicSubnet3/RouteTableAssociation"
   }
  },
  "RdsPostgresStackvpcPublicSubnet3DefaultRoute166C87AA": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "RdsPostgresStackvpcIGW59F97FCD"
    },
    "RouteTableId": {
     "Ref": "RdsPostgresStackvpcPublicSubnet3RouteTable292170FC"
    }
   },
   "DependsOn": [
    "RdsPostgresStackvpcVPCGW6C0E8D70"
   ],
   "Metadata": {
    "aws:cdk:path": "RdsPostgresStack/RdsPostgresStack-vpc/PublicSubnet3/DefaultRoute"
   }
  },
  "RdsPostgresStackvpcIsolatedSubnet1Subnet367BEA97": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-west-2a",
    "CidrBlock": "10.0.96.0/19",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Isolated"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Isolated"
     },
     {
      "Key": "Name",
      "Value": "RdsPostgresStack/RdsPostgresStack-vpc/IsolatedSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "RdsPostgresStackvpcCBA53F8B"
    }
   },
   "Metadata": {
    "aws:cdk:path": "RdsPostgresStack/RdsPostgresStack-vpc/IsolatedSubnet1/Subnet"
   }
  },
  "RdsPostgresStackvpcIsolatedSubnet1RouteTable210D1FD3": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "RdsPostgresStack/RdsPostgresStack-vpc/IsolatedSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "RdsPostgresStackvpcCBA53F8B"
    }
   },
   "Metadata": {
    "aws:cdk:path": "RdsPostgresStack/RdsPostgresStack-vpc/IsolatedSubnet1/RouteTable"
   }
  },
  "RdsPostgresStackvpcIsolatedSubnet1RouteTableAssociation5E84DBFA": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "RdsPostgresStackvpcIsolatedSubnet1RouteTable210D1FD3"
    },
    "SubnetId": {
     "Ref": "RdsPostgresStackvpcIsolatedSubnet1Subnet367BEA97"
    }
   },
   "Metadata": {
    "aws:cdk:path": "RdsPostgresStack/RdsPostgresStack-vpc/IsolatedSubnet1/RouteTableAssociation"
   }
  },
  "RdsPostgresStackvpcIsolatedSubnet2SubnetBFBE5E46": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-west-2b",
    "CidrBlock": "10.0.128.0/19",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Isolated"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Isolated"
     },
     {
      "Key": "Name",
      "Value": "RdsPostgresStack/RdsPostgresStack-vpc/IsolatedSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "RdsPostgresStackvpcCBA53F8B"
    }
   },
   "Metadata": {
    "aws:cdk:path": "RdsPostgresStack/RdsPostgresStack-vpc/IsolatedSubnet2/Subnet"
   }
  },
  "RdsPostgresStackvpcIsolatedSubnet2RouteTableD4E28503": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "RdsPostgresStack/RdsPostgresStack-vpc/IsolatedSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "RdsPostgresStackvpcCBA53F8B"
    }
   },
   "Metadata": {
    "aws:cdk:path": "RdsPostgresStack/RdsPostgresStack-vpc/IsolatedSubnet2/RouteTable"
   }
  },
  "RdsPostgresStackvpcIsolatedSubnet2RouteTableAssociationFED2595A": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "RdsPostgresStackvpcIsolatedSubnet2RouteTableD4E28503"
    },
    "SubnetId": {
     "Ref": "RdsPostgresStackvpcIsolatedSubnet2SubnetBFBE5E46"
    }
   },
   "Metadata": {
    "aws:cdk:path": "RdsPostgresStack/RdsPostgresStack-vpc/IsolatedSubnet2/RouteTableAssociation"
   }
  },
  "RdsPostgresStackvpcIsolatedSubnet3SubnetA8B42D7D": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-west-2c",
    "CidrBlock": "10.0.160.0/19",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Isolated"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Isolated"
     },
     {
      "Key": "Name",
      "Value": "RdsPostgresStack/RdsPostgresStack-vpc/IsolatedSubnet3"
     }
    ],
    "VpcId": {
     "Ref": "RdsPostgresStackvpcCBA53F8B"
    }
   },
   "Metadata": {
    "aws:cdk:path": "RdsPostgresStack/RdsPostgresStack-vpc/IsolatedSubnet3/Subnet"
   }
  },
  "RdsPostgresStackvpcIsolatedSubnet3RouteTableCE594FE7": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "RdsPostgresStack/RdsPostgresStack-vpc/IsolatedSubnet3"
     }
    ],
    "VpcId": {
     "Ref": "RdsPostgresStackvpcCBA53F8B"
    }
   },
   "Metadata": {
    "aws:cdk:path": "RdsPostgresStack/RdsPostgresStack-vpc/IsolatedSubnet3/RouteTable"
   }
  },
  "RdsPostgresStackvpcIsolatedSubnet3RouteTableAssociation8F9F42D3": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "RdsPostgresStackvpcIsolatedSubnet3RouteTableCE594FE7"
    },
    "SubnetId": {
     "Ref": "RdsPostgresStackvpcIsolatedSubnet3SubnetA8B42D7D"
    }
   },
   "Metadata": {
    "aws:cdk:path": "RdsPostgresStack/RdsPostgresStack-vpc/IsolatedSubnet3/RouteTableAssociation"
   }
  },
  "RdsPostgresStackvpcIGW59F97FCD": {
   "Type": "AWS::EC2::InternetGateway",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "RdsPostgresStack/RdsPostgresStack-vpc"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "RdsPostgresStack/RdsPostgresStack-vpc/IGW"
   }
  },
  "RdsPostgresStackvpcVPCGW6C0E8D70": {
   "Type": "AWS::EC2::VPCGatewayAttachment",
   "Properties": {
    "InternetGatewayId": {
     "Ref": "RdsPostgresStackvpcIGW59F97FCD"
    },
    "VpcId": {
     "Ref": "RdsPostgresStackvpcCBA53F8B"
    }
   },
   "Metadata": {
    "aws:cdk:path": "RdsPostgresStack/RdsPostgresStack-vpc/VPCGW"
   }
  },
  "RdsPostgresStackvpcRestrictDefaultSecurityGroupCustomResourceBCE31A24": {
   "Type": "Custom::VpcRestrictDefaultSG",
   "Properties": {
    "ServiceToken": {
     "Fn::GetAtt": [
      "CustomVpcRestrictDefaultSGCustomResourceProviderHandlerDC833E5E",
      "Arn"
     ]
    },
    "DefaultSecurityGroupId": {
     "Fn::GetAtt": [
      "RdsPostgresStackvpcCBA53F8B",
      "DefaultSecurityGroup"
     ]
    },
    "Account": "145423545297"
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete",
   "Metadata": {
    "aws:cdk:path": "RdsPostgresStack/RdsPostgresStack-vpc/RestrictDefaultSecurityGroupCustomResource/Default"
   }
  },
  "CustomVpcRestrictDefaultSGCustomResourceProviderRole26592FE0": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Version": "2012-10-17",
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "lambda.amazonaws.com"
       }
      }
     ]
    },
    "ManagedPolicyArns": [
     {
      "Fn::Sub": "arn:${AWS::Partition}:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole"
     }
    ],
    "Policies": [
     {
      "PolicyName": "Inline",
      "PolicyDocument": {
       "Version": "2012-10-17",
       "Statement": [
        {
         "Effect": "Allow",
         "Action": [
          "ec2:AuthorizeSecurityGroupIngress",
          "ec2:AuthorizeSecurityGroupEgress",
          "ec2:RevokeSecurityGroupIngress",
          "ec2:RevokeSecurityGroupEgress"
         ],
         "Resource": [
          {
           "Fn::Join": [
            "",
            [
             "arn:aws:ec2:us-west-2:145423545297:security-group/",
             {
              "Fn::GetAtt": [
               "RdsPostgresStackvpcCBA53F8B",
               "DefaultSecurityGroup"
              ]
             }
            ]
           ]
          }
         ]
        }
       ]
      }
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "RdsPostgresStack/Custom::VpcRestrictDefaultSGCustomResourceProvider/Role"
   }
  },
  "CustomVpcRestrictDefaultSGCustomResourceProviderHandlerDC833E5E": {
   "Type": "AWS::Lambda::Function",
   "Properties": {
    "Code": {
     "S3Bucket": "cdk-hnb659fds-assets-145423545297-us-west-2",
     "S3Key": "e77031893275c08bcaa0a774aa8b611727afd045b3b5d8e1e6f0f04063d9d386.zip"
    },
    "Timeout": 900,
    "MemorySize": 128,
    "Handler": "__entrypoint__.handler",
    "Role": {
     "Fn::GetAtt": [
      "CustomVpcRestrictDefaultSGCustomResourceProviderRole26592FE0",
      "Arn"
     ]
    },
    "Runtime": "nodejs16.x",
    "Description": "Lambda function for removing all inbound/outbound rules from the VPC default security group"
   },
   "DependsOn": [
    "CustomVpcRestrictDefaultSGCustomResourceProviderRole26592FE0"
   ],
   "Metadata": {
    "aws:cdk:path": "RdsPostgresStack/Custom::VpcRestrictDefaultSGCustomResourceProvider/Handler",
    "aws:asset:path": "asset.e77031893275c08bcaa0a774aa8b611727afd045b3b5d8e1e6f0f04063d9d386",
    "aws:asset:property": "Code"
   }
  },
  "ImportBucketBAF3A8E9": {
   "Type": "AWS::S3::Bucket",
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete",
   "Metadata": {
    "aws:cdk:path": "RdsPostgresStack/ImportBucket/Resource"
   }
  },
  "RdsPostgresStackrdsSubnetGroupC584F1C3": {
   "Type": "AWS::RDS::DBSubnetGroup",
   "Properties": {
    "DBSubnetGroupDescription": "Subnet group for RdsPostgresStack-rds database",
    "SubnetIds": [
     {
      "Ref": "RdsPostgresStackvpcPublicSubnet1Subnet77A07D2B"
     },
     {
      "Ref": "RdsPostgresStackvpcPublicSubnet2SubnetC802B7D9"
     },
     {
      "Ref": "RdsPostgresStackvpcPublicSubnet3Subnet5CA697CE"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "RdsPostgresStack/RdsPostgresStack-rds/SubnetGroup/Default"
   }
  },
  "RdsPostgresStackrdsSecurityGroupB18CBF60": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "Security group for RdsPostgresStack-rds database",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "VpcId": {
     "Ref": "RdsPostgresStackvpcCBA53F8B"
    }
   },
   "Metadata": {
    "aws:cdk:path": "RdsPostgresStack/RdsPostgresStack-rds/SecurityGroup/Resource"
   }
  },
  "RdsPostgresStackrdsS3ImportRole06097A1A": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "rds.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    }
   },
   "Metadata": {
    "aws:cdk:path": "RdsPostgresStack/RdsPostgresStack-rds/S3ImportRole/Resource"
   }
  },
  "RdsPostgresStackrdsS3ImportRoleDefaultPolicy63A79C8F": {
   "Type": "AWS::IAM::Policy",
   "Properties": {
    "PolicyDocument": {
     "Statement": [
      {
       "Action": [
        "s3:GetBucket*",
        "s3:GetObject*",
        "s3:List*"
       ],
       "Effect": "Allow",
       "Resource": [
        {
         "Fn::GetAtt": [
          "ImportBucketBAF3A8E9",
          "Arn"
         ]
        },
        {
         "Fn::Join": [
          "",
          [
           {
            "Fn::GetAtt": [
             "ImportBucketBAF3A8E9",
             "Arn"
            ]
           },
           "/*"
          ]
         ]
        }
       ]
      }
     ],
     "Version": "2012-10-17"
    },
    "PolicyName": "RdsPostgresStackrdsS3ImportRoleDefaultPolicy63A79C8F",
    "Roles": [
     {
      "Ref": "RdsPostgresStackrdsS3ImportRole06097A1A"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "RdsPostgresStack/RdsPostgresStack-rds/S3ImportRole/DefaultPolicy/Resource"
   }
  },
  "RdsPostgresStackrdsSecret4DFDCAF5": {
   "Type": "AWS::SecretsManager::Secret",
   "Properties": {
    "Description": {
     "Fn::Join": [
      "",
      [
       "Generated by the CDK for stack: ",
       {
        "Ref": "AWS::StackName"
       }
      ]
     ]
    },
    "GenerateSecretString": {
     "ExcludeCharacters": " %+~`#$&*()|[]{}:;<>?!'/@\"\\",
     "GenerateStringKey": "password",
     "PasswordLength": 30,
     "SecretStringTemplate": "{\"username\":\"postgres\"}"
    }
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete",
   "Metadata": {
    "aws:cdk:path": "RdsPostgresStack/RdsPostgresStack-rds/Secret/Resource"
   }
  },
  "RdsPostgresStackrdsSecretAttachment8AE06D5F": {
   "Type": "AWS::SecretsManager::SecretTargetAttachment",
   "Properties": {
    "SecretId": {
     "Ref": "RdsPostgresStackrdsSecret4DFDCAF5"
    },
    "TargetId": {
     "Ref": "RdsPostgresStackrds1E2F62A7"
    },
    "TargetType": "AWS::RDS::DBInstance"
   },
   "Metadata": {
    "aws:cdk:path": "RdsPostgresStack/RdsPostgresStack-rds/Secret/Attachment/Resource"
   }
  },
  "RdsPostgresStackrds1E2F62A7": {
   "Type": "AWS::RDS::DBInstance",
   "Properties": {
    "AllocatedStorage": "100",
    "AssociatedRoles": [
     {
      "FeatureName": "s3Import",
      "RoleArn": {
       "Fn::GetAtt": [
        "RdsPostgresStackrdsS3ImportRole06097A1A",
        "Arn"
       ]
      }
     }
    ],
    "CopyTagsToSnapshot": true,
    "DBInstanceClass": "db.t3.micro",
    "DBInstanceIdentifier": "rdspostgresstack-rds",
    "DBSubnetGroupName": {
     "Ref": "RdsPostgresStackrdsSubnetGroupC584F1C3"
    },
    "Engine": "postgres",
    "EngineVersion": "15.3",
    "MasterUserPassword": {
     "Fn::Join": [
      "",
      [
       "{{resolve:secretsmanager:",
       {
        "Ref": "RdsPostgresStackrdsSecret4DFDCAF5"
       },
       ":SecretString:password::}}"
      ]
     ]
    },
    "MasterUsername": {
     "Fn::Join": [
      "",
      [
       "{{resolve:secretsmanager:",
       {
        "Ref": "RdsPostgresStackrdsSecret4DFDCAF5"
       },
       ":SecretString:username::}}"
      ]
     ]
    },
    "PubliclyAccessible": true,
    "StorageType": "gp2",
    "VPCSecurityGroups": [
     {
      "Fn::GetAtt": [
       "RdsPostgresStackrdsSecurityGroupB18CBF60",
       "GroupId"
      ]
     }
    ]
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete",
   "Metadata": {
    "aws:cdk:path": "RdsPostgresStack/RdsPostgresStack-rds/Resource"
   }
  },
  "CDKMetadata": {
   "Type": "AWS::CDK::Metadata",
   "Properties": {
    "Analytics": "v2:deflate64:H4sIAAAAAAAA/12STW+DMAyGf8vuada1l14L1apOOyCoekUmeCxrSKp8tEKI/75A+Oh28pvHjmP8sqG7HV2/wMOsWHldCV7QNrPArsSjvDVb2kaOXdGS+EuOKoQIDHbEbPO2xJtQTY3S0pA6zICAMWgN3fehIwLqogTa+l6f0KC+oDZcSZJxWQm0Sr47yWxPZuFLJ90RDjVtUyWwx0NMlOCs6Y9BdQTZhraXG+vZJYlJ4gqfyFwhw0csKlXO4hmK0C7whfmRFeMwDTEkSKL5HSwuPU7Sovb66OkDmvHR8bS3fpPfwx4yZE5z2xy1crfhuWfQEV0a2h7AQuHXepLGgmRIwjvznUP0DKZq30mHYQ7RdNMbM1BTg4QK9bDysTCEM+gK7dOEc8H/TDf5loves9z/GExwun+YWPDBRjLY63+byvtIYmesqlM0ymkWnJr0Av/UJFrdeYm6Ix9wh9fNm [...]
   },
   "Metadata": {
    "aws:cdk:path": "RdsPostgresStack/CDKMetadata/Default"
   }
  }
 },
 "Parameters": {
  "BootstrapVersion": {
   "Type": "AWS::SSM::Parameter::Value<String>",
   "Default": "/cdk-bootstrap/hnb659fds/version",
   "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]"
  }
 },
 "Rules": {
  "CheckBootstrapVersion": {
   "Assertions": [
    {
     "Assert": {
      "Fn::Not": [
       {
        "Fn::Contains": [
         [
          "1",
          "2",
          "3",
          "4",
          "5"
         ],
         {
          "Ref": "BootstrapVersion"
         }
        ]
       }
      ]
     },
     "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI."
    }
   ]
  }
 }
}
